Fixed issue on ios

--- a/public/startingLocation/style.css
+++ b/public/startingLocation/style.css
@@ -12,7 +12,7 @@
 
 #fieldImage {
   max-width: 100vw;
-  max-height: 80vh;
+  max-height: 70vh;
   top: 5vh;
   position: absolute;
   border: 1px solid white;
