--- a/public/teleop/style.css
+++ b/public/teleop/style.css
@@ -17,7 +17,7 @@
 
 #fieldImage {
   max-width: 100vw;
-  max-height: 55vh;
+  max-height: 49vh;
   top: 5vh;
   position: absolute;
   border: 1px solid white;
@@ -37,7 +37,7 @@
 #gamePieceViewer {
   background-color: #bb9839;
   position: absolute;
-  top: 65vh;
+  top: 55vh;
   height: 20vh;
   width: 30vh;
   display: flex;
